[DEV] add account remove button